Modifica diagramma dei casi d'uso

--- a/docs/src/Emotionally.tex
+++ b/docs/src/Emotionally.tex
@@ -14,6 +14,7 @@
 \usepackage{appendix}
 \usepackage{tikz}
 \usepackage{tikz-uml}
+\usepackage{float}
 \usepackage{multirow}
 \tikzumlset{fill class=none}
 
