Update Documento dei requisiti (WIP)

--- a/docs/src/parts/documento_requisiti/_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/_requisiti.tex
@@ -479,8 +479,29 @@ sensibili quali email, password, nome, cognome e sesso.
 		\hline
 	\end{longtable}
 \end{table}
+
 \section{Requisiti di gestione}\label{sec:requisiti-di-gestione}
+La memorizzazzione dei dati sensibili dell'utente e dei suoi progetti verrà 
+effettuata su una base di dati creata dal team FSC. Gli stessi verranno 
+sottoposti a backup sistematici per evitare la loro perdita nel momento in cui 
+il sistema si interrompa per qualsiasi causa.
+
+Il team FSC, posto dal committente come gruppo produttore della piattaforma 
+web, si occuperà della manutenzione ordinaria e straordinaria del sistema, 
+affinchè gli obiettivi definiti di comune accordo non cessino di funzionare.
+
+Per quanto riguarda la gestione dei contenuti di Emotionally, saranno gli 
+utenti stessi che inseriranno i contenuti che saranno i video da analizzare per 
+le proprie analisi senza doversi preoccupare della struttura architetturale 
+implementata, permettendo la semplicità nelle operazioni di upload. Il sistema 
+all'analisi di un progetto o di un singolo video renderà disponibile un report 
+che l'utente può visionare e, se vuole, scaricare. 
+Sarà compito del team FSC a redigere i contenuti della landing page, dove 
+verranno riportate descrizioni delle funzionalità del sistema, concordati con 
+il committente.
 
 \section{Requisiti di accessibilità}\label{sec:requisiti-di-accessibilita}
+% TODO: Insert accessibility requirements
 
 \section{Requisiti di usabilità}\label{sec:requisiti-di-usabilita}
+% TODO: Insert usability requirements
