Creazione di un helper per gli scenari

--- a/docs/src/parts/documento_requisiti/_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/_requisiti.tex
@@ -68,326 +68,7 @@ offre ai suoi utenti.
 
 \subsection{Rappresentazione tabellare}
 % TODO: Complete use case scenarios
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Test analysis}
-	\label{tab:use-case-test-analysis}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & Registration \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Registration}
-	\label{tab:use-case-registration}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & Test analysis \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Login}
-	\label{tab:use-case-login}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & Login \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Logout}
-	\label{tab:use-case-logout}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & Logout \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Create project}
-	\label{tab:use-case-project-creation}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & Create project \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: View project}
-	\label{tab:use-case-project-view}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & View project \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Edit project}
-	\label{tab:use-case-project-editing}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & Edit project \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Remove project}
-	\label{tab:use-case-project-removal}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & Remove project \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Share project}
-	\label{tab:use-case-sharing-project}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & Share project \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Upload video}
-	\label{tab:use-case-video-upload}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & Upload video\\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Edit video}
-	\label{tab:use-case-video-editing}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & Edit video\\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Remove video}
-	\label{tab:use-case-video-removal}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & Remove video\\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: view report}
-	\label{tab:use-case-report-view}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & View report \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: View video report}
-	\label{tab:use-case-video-report-view}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & View video report \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: View project report}
-	\label{tab:use-case-project-report-view}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & View project report\\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Download report}
-	\label{tab:use-case-report-download}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		
-		Nome caso d'uso & Download report\\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-		
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Update user data}
-	\label{tab:use-case-user-data-update}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
-		Nome caso d'uso & Update user data \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & \\
-
-	\end{longtable}
-\end{table}
-
-\begin{table}[H]
-	\centering
-	\caption{Use Case: Delete account}
-	\label{tab:use-case-delete-account}
-	\rowcolors{2}{gray!25}{white!0}
-	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}}
-		Nome caso d'uso & Delete account \\
-		Descrizione & \\
-		Attori & \\
-		Pre-condizioni & \\
-		Sequenza delle azioni & \\
-		Post-condizioni & \\
-		Scenario alternativo & 
-	\end{longtable}
-\end{table}
+\input{parts/documento_requisiti/_scenari.tex}
 
 \subsection{Modello dei dati}
 % TODO: Insert Diagram E-R
