Caricamento modello E-R concettuale

--- a/docs/src/parts/documento_requisiti/_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/_requisiti.tex
@@ -440,9 +440,10 @@ offre ai suoi utenti.
 		Scenario alternativo & 
 	\end{longtable}
 \end{table}
-
+\newpage
 \subsection{Modello dei dati}
-% TODO: Insert Diagram E-R
+Di seguito è riportato il diagramma entità relazioni concettuale:
+\input{images/er.tex}
 
 \subsection{Sicurezza e privacy}
 Per quanto riguarda i sistemi di sicurezza, la piattaforma web è suddivisa in 
