--- a/docs/src/tikz-er.sty
+++ b/docs/src/tikz-er.sty
@@ -19,7 +19,7 @@
 	\node[draw,
 	rectangle split,
 	rectangle split parts=2,
-	rectangle split part fill={blue!20,white},
+	rectangle split part fill={emotionally-color!35,white},
 	minimum width=2.5cm,
 	text width=2cm,
 	align=left, #1] ({#2}) {%
@@ -35,7 +35,7 @@
 	shape aspect=2, 
 	inner sep = 2pt,
 	text centered,
-	fill=blue!10!white,
+	fill=emotionally-color!20!white,
 	font=\itshape,#1](#2){#2}
 }
 
