--- a/docs/src/parts/documento_requisiti/documento_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/documento_requisiti.tex
@@ -20,4 +20,4 @@
     % \input{parts/documento_requisiti/_glossario.tex}
 
     \input{parts/documento_requisiti/_analisi_concorrenza.tex}
-\end{appendices}
+\end{appendices}%testing purposes
