Update section "Generalità"

--- a/docs/src/parts/documento_requisiti/_generalita.tex
+++ b/docs/src/parts/documento_requisiti/_generalita.tex
@@ -90,13 +90,18 @@ fra le due categorie, sono rappresentate in \autoref{fig:tipi-utente}.
 		\rowcolor{emotionally-color}
 		{\color{white} \textbf{Categoria di utente}} & {\color{white} \textbf{Obiettivi del commitente}} & {\color{white} \textbf{Priorità}} \\\hline
 		\endfirsthead
-		\cellcolor{white!0}                          & Analizzare video o gruppi di video                & Alta                              \\
-		\cellcolor{white!0}                          & Visualizzare dei report delle analisi effettuate  & Alta                              \\
-		\cellcolor{white!0}                          & Esportare i report delle analisi effettuate       & Media                             \\
-		\cellcolor{white!0}                          & Condividere i progetti creati con altri utenti    & Media                             \\
-		\multirow{-5}{*}{Analista}                   & Analizzare dei video registrati in tempo reale    & Alta                              \\
-		% @todo Insert goals of the designer
-		Designer                                     &                                                   &                                   \\
+		\cellcolor{white!0}                          & Rendere efficiente l'analisi di 
+		singoli video o gruppi di video                & 
+		Alta                              \\
+		\cellcolor{white!0}                          & Generare automaticamente i report 
+		delle analisi effettuate  & Alta                              \\
+		\multirow{-3}{*}{Analista}                   & Migliorare la comunicazione 
+		attraverso la condivisione di progetto    & Media                              \\
+		\cellcolor{gray!25}                            & Generare automaticamente i 
+		report in formati strutturati e formali (es. JSON)          & 
+		Alta                              \\
+		\multirow{-2}{*}{\cellcolor{gray!25} Designer} & Migliorare la comunicazione 
+		attraverso la condivisione di progetto & Media                              \\
 		\hline
 	\end{longtable}
 \end{table}
