Update requirements document

--- a/docs/src/parts/documento_requisiti/_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/_requisiti.tex
@@ -24,24 +24,23 @@ Per quanto riguarda l'area pubblica si prevede quanto segue:
 \item \textbf{Login}
 \item \textbf{Registrazione}
 \end{itemize}
-
 Per quanto riguarda l'area privata, ovvero per ogni utente loggato si prevede 
-quanto segue (\textit{con * viene indita la molteplice quantità dell'oggetto a 
+quanto segue (\textit{con (*) viene indicata la molteplice quantità 
+dell'oggetto a 
 cui è affiancato}): 
 \begin{itemize}
 	\item \textbf{Home}
 	\begin{itemize}
-		\item \textbf{Progetti *} 
+		\item \textbf{Progetti (*)} 
 		\begin{itemize}
-			\item \textbf{Sottoprogetti *}
+			\item \textbf{Sottoprogetti (*)}
 			\begin{itemize}
-				\item \textbf{Video *}
+				\item \textbf{Video (*)}
 			\end{itemize}
-		\item \textbf{Video *}
+		\item \textbf{Video (*)}
 		\end{itemize}
 	\end{itemize}
 \end{itemize}
-
 Indicativamente, la struttura di navigazione delle pagine più importante è 
 definita mediante le seguenti \textit{gabbie logiche grafiche minimali}. Si 
 riserverà al web designer il compito di definire meccanismi di navigazione e 
