Display gabbie di massima
Si sono corretti, inoltre, alcuni problemi riscontrati nel file di adobe XD.

--- a/docs/src/parts/documento_requisiti/_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/_requisiti.tex
@@ -46,7 +46,7 @@ definita mediante le seguenti \textit{gabbie logiche grafiche minimali}. Si
 riserverà al web designer il compito di definire meccanismi di navigazione e 
 layout grafici più avanzati che ne determineranno il risultato finale.
 
-% TODO: Insert a logical cages.
+\input{images/gabbie-di-massima.tex}
 
 \section{Requisiti di comunicazione}\label{sec:requisiti-di-comunicazione}
 Le pagine interne della piattaforma web Emotionally dovranno essere 
