Cambiato il colore di sfondo dei casi d'uso

--- a/docs/src/Emotionally.tex
+++ b/docs/src/Emotionally.tex
@@ -17,7 +17,7 @@
 \usepackage{tikz-uml}
 \usepackage{float}
 \usepackage{multirow}
-\tikzumlset{fill class=none}
+\tikzumlset{fill class=none, fill usecase=emotionally-color!35}
 
 \input{includes/acronyms.tex}
 
