Variazione del colore delle tabelle

--- a/docs/src/parts/documento_requisiti/_generalita.tex
+++ b/docs/src/parts/documento_requisiti/_generalita.tex
@@ -67,8 +67,8 @@ fra le due categorie, sono rappresentate in \autoref{fig:tipi-utente}.
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
 		\hline
-		\rowcolor{emotionally-color}
-		{\color{white} \textbf{Categoria di utente}}   & {\color{white} \textbf{Bisogni principali in relazione al sito}}     & {\color{white} \textbf{Priorità}} \\\hline
+		\rowcolor{emotionally-color!35}
+		{\textbf{Categoria di utente}}   & {\textbf{Bisogni principali in relazione al sito}}     & {\textbf{Priorità}} \\\hline
 		\endfirsthead
 		\cellcolor{white!0}                            & Analizzare video o gruppi di video                                   & Alta                              \\
 		\cellcolor{white!0}                            & Visualizzare dei report delle analisi effettuate                     & Alta                              \\
@@ -87,8 +87,8 @@ fra le due categorie, sono rappresentate in \autoref{fig:tipi-utente}.
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
 		\hline
-		\rowcolor{emotionally-color}
-		{\color{white} \textbf{Categoria di utente}} & {\color{white} \textbf{Obiettivi del commitente}} & {\color{white} \textbf{Priorità}} \\\hline
+		\rowcolor{emotionally-color!35}
+		{\textbf{Categoria di utente}} & {\textbf{Obiettivi del commitente}} & {\textbf{Priorità}} \\\hline
 		\endfirsthead
 		\cellcolor{white!0}                          & Rendere efficiente l'analisi di 
 		singoli video o gruppi di video                & 
