--- a/docs/src/parts/documento_requisiti/_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/_requisiti.tex
@@ -125,10 +125,9 @@ sensibili quali email, password, nome, cognome e sesso.
 	\rowcolors{2}{gray!25}{white!0}
 	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.25\textwidth}|m{.25\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
 		\hline
-		\rowcolor{emotionally-color}
-		{\color{white} \textbf{Sezione}}   & {\color{white} 
-		\textbf{Sottosezione}}     & {\color{white} \textbf{Requisiti di 
-		contenuto}} & {\color{white} \textbf{Dove trovare le informazioni}} 
+		\rowcolor{emotionally-color!35}
+		{\textbf{Sezione}}   & {\textbf{Sottosezione}}     & {\textbf{Requisiti di 
+		contenuto}} & {\textbf{Dove trovare le informazioni}} 
 		\\\hline
 		\endfirsthead
 		\cellcolor{white!0}  & Try me & Questa sezione ha lo scopo di far 
